# biometric

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .watchmanconfig  AGENTS.md  Dockerfile  Makefile  README.md  benchmark.py  docker-compose.deps.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  e2e_test.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  readme.md  requirements.txt  run.bat  setup.py  turbo.json
apps/backend/: .env.dev  .gitignore  Dockerfile  README.md  alembic.ini  benchmark_gpu.py  dev.py  docker-compose.dev.yml  export_openapi.py  openapi.json  package.json  promptfooconfig.yaml  pyproject.toml  pytest.ini  requirements.txt
apps/backend/migrations/: 001_init_pgvector.sql  002_add_image_path.sql
apps/backend/scripts/: __init__.py  benchmark_partials.py  benchmark_phase13.py  benchmark_phase21_mcc.py  benchmark_qdrant_search.py  benchmark_score_distribution.py  benchmark_soco.py  bulk_enroll_socofing.py  cleanup_qdrant.py  debug_pipeline.py  diverse_test.py  generate_patch_dataset.py  ground_truth_count.py  mcc_benchmark.py  mcc_match_v4.py  mcc_match_v5.py  mcc_matching_viz.py  mcc_visualize.py  mcc_viz_v3.py  mcc_viz_v4.py  onnx_smoke_test.py  quick_enroll.py  raw_extractor.py  reenroll_cylinders.py  reenroll_pairs.py  reenroll_triplets.py  seed_demo_data.py  seed_real_data.py  spike_mcc.py  spike_rotation.py  test_enhance_mode.py  test_ensemble_mode.py  train_patch_classifier.py  visualize_phase13.py  visualize_rag_map.py  visualize_ridge_graph.py
apps/backend/src/: gpu_utils.py  main.py
apps/backend/src/ai/: __init__.py  assistant.py  config.py  enhancement.py  extraction.py  llm.py  loader.py  model_manager.py  report_generator.py  segmentation.py  tracing.py
apps/backend/src/ai/models/: afrnet.py  unet.py
apps/backend/src/api/: __init__.py  cli.py  dependencies.py  dev.py  errors.py  prefix.py  rest.py
apps/backend/src/api/dependencies/: auth.py
apps/backend/src/api/routers/: __init__.py  audit.py  auditoria.py  auth.py  captures.py  cases.py  decisiones.py  genai.py  (+11 more)
apps/backend/src/biometric_fingerprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/backend/src/core/: __init__.py  config.py  gpu_utils.py  interfaces.py  metrics.py  types.py
apps/backend/src/db/: __init__.py  enums.py  models.py  nebula_repository.py  of_registry.py  qdrant_chunk_repository.py  qdrant_embedding_repository.py  qdrant_mcc_repository.py  qdrant_pair_repository.py  qdrant_repository.py  readonly.py
apps/backend/src/dev/: logger.py
apps/backend/src/domain/: forensic_rules.py
apps/backend/src/processing/: __init__.py  bozorth3_linker.py  crossing_number.py  enhancer.py  extractor.py  false_minutiae_filter.py  gabor.py  graph_embedder.py  graph_extractor.py  growing_matcher.py  mcc_descriptor.py  minutia_quality.py  normalization.py  of_filter.py  of_similarity.py  orientation.py  pair_extractor.py  post_hooks.py  pre_hooks.py  scale_normalization.py  skeletonize_step.py  spurious_filter.py  thinning.py  tps.py  triplet_alignment.py  triplet_extractor.py  triplet_validator.py  vectorizer.py
apps/backend/src/schemas/: __init__.py  capture_schema.py  dictamen_schema.py  fingerprint_schema.py  person_schema.py
apps/backend/src/services/: __init__.py  audit_service.py  auth_service.py  case_service.py  comparison_service.py  decision_service.py  embedding_service.py  evidence_service.py  fingerprint_enrollment_service.py  fingerprint_service.py  fingerprint_storage.py  matching_service.py  mcc_matching_service.py  pdf_generator.py  person_service.py  polyglot_matching_service.py  rag_matching_service.py  sliding_window.py
apps/backend/src/storage/: __init__.py  database.py  object_storage.py  repository.py  vector_index.py
apps/backend/tests/: config.py  conftest.py  test_ai_enhancement.py  test_ai_extractor.py  test_ai_pipeline.py  test_ai_segmentation.py  test_api_e2e.py  test_extractor.py  test_gpu_utils.py  test_integration.py  test_models.py  test_performance.py  test_vectorizer.py
apps/backend/tests/ai/: test_ai_components.py  test_assistant.py  test_llm.py  test_model_manager.py  test_report_generator.py
apps/backend/tests/api/: __init__.py  test_audit_router.py  test_auth_router.py  test_captures_router.py  test_dependencies.py  test_errors.py  test_fingerprints.py  test_fingerprints_router.py  test_genai.py  test_known_fingerprints_router.py  test_latent_search.py  test_matching_router.py  test_persons_router.py  test_reports_router.py
apps/backend/tests/core/: test_config.py  test_mcc_matcher_protocol.py
apps/backend/tests/db/: test_enums.py  test_models_phase17.py  test_nebula_repository.py  test_nebula_repository_e2e.py  test_of_registry.py  test_qdrant_chunk_repository.py  test_qdrant_mcc_repository.py  test_qdrant_repository.py  test_readonly.py
apps/backend/tests/domain/: test_forensic_rules.py  test_mcc_types.py
apps/backend/tests/fixtures/: socofing_fixtures.py
apps/backend/tests/integration/: test_mcc_matching_e2e.py  test_polyglot_e2e.py  test_qdrant_chunk_e2e.py  test_qdrant_orchestrator_e2e.py  test_rag_matching_e2e.py
apps/backend/tests/processing/: test_bozorth3_linker.py  test_cpu_enhancer.py  test_enhancers.py  test_extractor.py  test_graph_embedder.py  test_graph_extractor.py  test_growing_matcher.py  test_minutia_quality.py  test_normalization.py  test_of_filter.py  test_of_similarity.py  test_post_hooks.py  test_pre_hooks.py  test_rag_vectorizer.py  test_triplet_alignment.py  test_triplet_extractor.py  test_vectorizer.py
apps/backend/tests/properties/: test_rag_vectorizer_properties.py
apps/backend/tests/schemas/: test_dictamen.py
apps/backend/tests/services/: conftest.py  test_audit_service.py  test_auth_service.py  test_case_service.py  test_decision_service.py  test_deprecation.py  test_evidence_service.py  test_fingerprint_enrollment_service.py  test_fingerprint_service.py  test_matching_service.py  test_mcc_matching_service.py  test_pdf_generator.py  test_person_service.py  test_rag_matching_service.py
(+477 files in other folders)
