[project]
name = "biometric-fingerprint"
version = "1.0.0"
description = "Sistema biométrico de huellas dactilares para uso profesional y forense"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Biometric Team" }]
keywords = ["biometric", "fingerprint", "minutiae", "forensic"]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "opencv-python-headless>=4.8.0",
    "cupy-cuda13x>=13.0.0",
    "pgvector>=0.2.5",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "matplotlib>=3.8.0",
    "minio>=7.2.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "weasyprint>=62.0",
    "uuid6>=2024.1.1",
    "llama-index-core>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "sknw>=0.15",
    "networkx>=3.0",
    "numba>=0.47",
    "qdrant-client>=1.8.0",
    "nebula3-python>=3.8.0",
]

[project.optional-dependencies]
tracing = [
    "arize-phoenix>=17.0.0",
    "opentelemetry-sdk>=1.25.0",
    "openinference-instrumentation-llama-index>=4.0.0",
]

[project.scripts]
biometric = "src.api.cli:cli"
biometric-api = "src.main:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "-ra", "--cov=src", "--cov-report=term-missing", "--cov-fail-under=0", "-m", "not performance"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # unused imports in __init__
"tests/*" = ["B011"]     # assert False

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "src/db/migrations/*",
    "**/__init__.py",
]
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
