[project]
name = "biometric-fingerprint"
version = "1.0.0"
description = "Sistema biométrico de huellas dactilares para uso profesional y forense"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Biometric Team" }]
keywords = ["biometric", "fingerprint", "minutiae", "forensic"]

dependencies = [
    "torch>=2.0.0",
    "timm>=0.9.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "opencv-python-headless>=4.8.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "matplotlib>=3.8.0",
    "minio>=7.2.20",
    "PyJWT>=2.9.0",
    "cryptography>=44.0.0",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.0,<4.1",
    "weasyprint>=62.0",
    "uuid6>=2024.1.1",
    "llama-index-core>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "sknw>=0.15",
    "networkx>=3.0",
    "numba>=0.47",
    "qdrant-client>=1.8.0",
    "nebula3-python>=3.8.0",
    "llama-index-llms-openai-like>=0.7.2",
    "testcontainers>=4.14.2",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
tracing = [
    "arize-phoenix>=17.0.0",
    "opentelemetry-sdk>=1.25.0",
    "openinference-instrumentation-llama-index>=4.0.0",
]

[project.scripts]
biometric = "src.api.cli:cli"
biometric-api = "src.main:app"
dev = "src.api.dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "-ra", "--cov=src", "--cov-report=term-missing", "--cov-fail-under=0", "-m", "not performance"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes — logic errors (F821: undefined name)
    "I",    # isort — import order
    "N",    # pep8-naming — naming conventions
    "UP",   # pyupgrade — modern syntax
    "B",    # flake8-bugbear — common bugs
    "B904", # raise-within-with
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "A",    # flake8-builtins — shadowing builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "PERF", # perflint — performance
    "RET",  # flake8-return
    "TRY",  # tryceratops — try/except style
    "PTH",  # flake8-use-pathlib
    "FBT",  # flake8-boolean-trap
    "SLF",  # flake8-self
    "RSE",  # flake8-raise
    "YTT",  # flake8-2020 — sys.version checks
    "FLY",  # flynt — f-strings
    "INT",  # flake8-int — int-conversion
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # FastAPI uses Depends(...)/Query(...)/Field(...) in defaults
    "SIM108", # single-line ternary — readability preference
    "SLF001", # allow private member access where intended
    "ARG001", # allow unused function args (e.g. FastAPI dependencies)
    "ARG002", # allow unused method args
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "TRY"]
"src/processing/enhancers/cpu.py" = ["N806"]
"src/processing/pre_hooks.py" = ["N806", "RUF002"]
"src/processing/tps.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.processing.gabor",
    "src.processing.extractor",
    "src.processing.tps",
    "src.processing.mcc_descriptor",
    "src.processing.skeletonize_step",
    "src.processing.enhancers.cpu",
]
ignore_errors = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnnecessaryComparison = false
reportUnnecessaryIsInstance = false
reportPrivateUsage = false
reportConstantRedefinition = false
reportUnusedFunction = false
reportMissingTypeArgument = false
reportDeprecated = false

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "src/db/migrations/*",
    "**/__init__.py",
]
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "aiosqlite>=0.20.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pyright>=1.1.380",
]
